--- a/src/main/resources/static/back/order/order.html
+++ b/src/main/resources/static/back/order/order.html
@@ -123,29 +123,7 @@
                                                 <th class="col-md-2">管理</th>
                                             </tr>
                                             </thead>
-                                            <tbody>
-                                            <tr role="row" class="odd">
-                                                <td>123456</td>
-                                                <td>123456</td>
-                                                <td>人间词话</td>
-                                                <td>代还</td>
-                                                <td>2019/03/03</td>
-                                                <td></td>
-                                                <td>
-                                                    <div>
-                                                        <div class="row">
-                                                            <div class="col-md-6">
-                                                                <button type="button" class="btn btn-block btn-outline-primary btn-sm">编辑
-                                                                </button>
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <button type="button" class="btn btn-block btn-outline-danger btn-sm">删除
-                                                                </button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                            </tr>
+                                            <tbody id="userList">
                                             </tbody>
                                         </table>
                                     </div>
@@ -154,16 +132,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="dataTables_paginate paging_simple_numbers" id="example1_paginate">
-                                                <ul class="pagination">
-                                                    <li class="paginate_button page-item previous disabled" id="example1_previous"><a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0" class="page-link">上一页</a></li>
-                                                    <li class="paginate_button page-item active"><a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0" class="page-link">1</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0" class="page-link">2</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0" class="page-link">3</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0" class="page-link">4</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0" class="page-link">5</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0" class="page-link">6</a></li>
-                                                    <li class="paginate_button page-item next" id="example1_next"><a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0" class="page-link">下一页</a></li>
-                                                </ul>
+
                                             </div>
                                         </div>
                                     </div>
@@ -222,6 +191,6 @@
 <script src="../plugins/jquery/jquery.min.js"></script>
 <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="../dist/js/adminlte.min.js"></script>
-<script src="../js/model.js"></script>
+<script src="js/order.js"></script>
 </body>
 </html>
