--- a/src/main/resources/static/back/book/book.html
+++ b/src/main/resources/static/back/book/book.html
@@ -135,16 +135,16 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="dataTables_paginate paging_simple_numbers" id="example1_paginate">
-                                                <ul class="pagination">
-                                                    <li class="paginate_button page-item previous disabled" id="example1_previous"><a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0" class="page-link">上一页</a></li>
-                                                    <li class="paginate_button page-item active"><a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0" class="page-link">1</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0" class="page-link">2</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0" class="page-link">3</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0" class="page-link">4</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0" class="page-link">5</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0" class="page-link">6</a></li>
-                                                    <li class="paginate_button page-item next" id="example1_next"><a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0" class="page-link">下一页</a></li>
-                                                </ul>
+                                                <!--<ul class="pagination">-->
+                                                    <!--<li class="paginate_button page-item previous disabled" id="example1_previous"><a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0" class="page-link">上一页</a></li>-->
+                                                    <!--<li class="paginate_button page-item active"><a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0" class="page-link">1</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0" class="page-link">2</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0" class="page-link">3</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0" class="page-link">4</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0" class="page-link">5</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0" class="page-link">6</a></li>-->
+                                                    <!--<li class="paginate_button page-item next" id="example1_next"><a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0" class="page-link">下一页</a></li>-->
+                                                <!--</ul>-->
                                             </div>
                                         </div>
                                     </div>
@@ -222,6 +222,58 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal" id="closeUpload">关闭</button>
                         <button type="button" class="btn btn-primary" onclick="createBook()">添加</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <a data-toggle="modal" data-target="#updateUserModal" id="updateUser" onclick="return false;"></a>
+        <div class="modal fade" id="updateUserModal" tabindex="-1" role="dialog" aria-labelledby="updateUserModalLabel" data-backdrop="static">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="updateUserModalLabel">更改信息</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+
+                    <div class="modal-body">
+                        <form id="userForm" method="GET" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label for="reAuthorName" class="control-label">重新输入作者名</label>
+                                <input type="text" class="form-control" id="reAuthorName" maxlength="200" placeholder="不能超过200字符..." name="authorName">
+                            </div>
+                            <div class="form-group">
+                                <label for="reDescription" class="control-label">重新输入书籍描述</label>
+                                <input type="text" class="form-control" id="reDescription" maxlength="200" placeholder="不能超过200字符..." name="description">
+                            </div>
+                            <div class="form-group">
+                                <label for="rePressName" class="control-label">重新输入出版社名字</label>
+                                <input type="text" class="form-control" id="rePressName" maxlength="200" placeholder="不能超过200字符..." name="pressName">
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">重新选择图书分类</label>
+                                <select class="form-control" id="reClass" name="bookClass">
+                                    <option>小说</option>
+                                    <option>传记</option>
+                                    <option>文学</option>
+                                    <option>青春文学</option>
+                                    <option>心灵修养</option>
+                                    <option>人生哲学</option>
+                                    <option>职场</option>
+                                    <option>人际交往</option>
+                                    <option>口才</option>
+                                    <option>计算机</option>
+                                    <option>网络</option>
+                                    <option>科普读物</option>
+                                    <option>建筑</option>
+                                    <option>自然科学</option>
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal" id="closeUpdate">关闭</button>
+                        <button type="button" class="btn btn-primary"  onclick="update()">更新</button>
                     </div>
                 </div>
             </div>
