--- a/src/main/resources/static/back/user/superUser.html
+++ b/src/main/resources/static/back/user/superUser.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div>
-                            <button type="button" class="btn btn-block btn-outline-primary btn-lg" onclick="addUser()">添加管理员</button>
+                            <button type="button" class="btn btn-block btn-outline-primary btn-lg" onclick="clickAddUser()">添加管理员</button>
                         </div>
                     </div>
                     <div class="col-lg-3 col-6">
@@ -148,16 +148,16 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="dataTables_paginate paging_simple_numbers" id="example1_paginate">
-                                                <ul class="pagination">
-                                                    <li class="paginate_button page-item previous disabled" id="example1_previous"><a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0" class="page-link">上一页</a></li>
-                                                    <li class="paginate_button page-item active"><a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0" class="page-link">1</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0" class="page-link">2</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0" class="page-link">3</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0" class="page-link">4</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0" class="page-link">5</a></li>
-                                                    <li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0" class="page-link">6</a></li>
-                                                    <li class="paginate_button page-item next" id="example1_next"><a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0" class="page-link">下一页</a></li>
-                                                </ul>
+                                                <!--<ul class="pagination">-->
+                                                    <!--<li class="paginate_button page-item previous disabled" id="example1_previous"><a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0" class="page-link">上一页</a></li>-->
+                                                    <!--<li class="paginate_button page-item active"><a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0" class="page-link">1</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0" class="page-link">2</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0" class="page-link">3</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0" class="page-link">4</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0" class="page-link">5</a></li>-->
+                                                    <!--<li class="paginate_button page-item "><a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0" class="page-link">6</a></li>-->
+                                                    <!--<li class="paginate_button page-item next" id="example1_next"><a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0" class="page-link">下一页</a></li>-->
+                                                <!--</ul>-->
                                             </div>
                                         </div>
                                     </div>
@@ -193,6 +193,10 @@
                                 <label for="name" class="control-label">姓名</label>
                                 <input type="text" class="form-control" id="name" maxlength="200" placeholder="不能超过200字符..." name="name">
                             </div>
+                            <div class="form-group">
+                                <label for="password" class="control-label">密码</label>
+                                <input type="password" class="form-control" id="password" maxlength="200" placeholder="不能超过200字符..." name="password">
+                            </div>
                             <div id="videoFile" class="w50" style="display: none"></div>
                         </form>
                     </div>
@@ -200,7 +204,32 @@
                     <!--关闭 上传-->
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal" id="closeUpload">关闭</button>
-                        <button type="button" class="btn btn-primary" onclick="uploadVideo()">添加</button>
+                        <button type="button" class="btn btn-primary" onclick="createUser()">添加</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <a data-toggle="modal" data-target="#updateUserModal" id="updateUser" onclick="return false;"></a>
+        <div class="modal fade" id="updateUserModal" tabindex="-1" role="dialog" aria-labelledby="updateUserModalLabel" data-backdrop="static">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="updateUserModalLabel">更改信息</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+
+                    <div class="modal-body">
+                        <form id="userForm" method="GET" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label for="name" class="control-label">重新输入密码</label>
+                                <input type="text" class="form-control" id="newPassword" maxlength="200" placeholder="不能超过200字符..." name="password">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal" id="closeUpdate">关闭</button>
+                        <button type="button" class="btn btn-primary"  onclick="update()">更新</button>
                     </div>
                 </div>
             </div>
