--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,84 +28,7 @@
     <!-- ##### Right Side Cart Area ##### -->
     <div class="cart-bg-overlay"></div>
 
-    <div class="right-side-cart-area">
-
-        <!-- Cart Button -->
-        <div class="cart-button">
-            <a href="#" id="rightSideCart"><img src="show/img/core-img/user.svg" alt=""></a>
-        </div>
-
-        <div class="cart-content d-flex">
-
-            <!-- Cart List Area -->
-            <div class="cart-list">
-                <!-- Single Cart Item -->
-                <div class="single-cart-item">
-                    <a href="#" class="product-image">
-                        <img src="show/img/product-img/product-1.jpg" class="cart-thumb" alt="">
-                        <!-- Cart Item Desc -->
-                        <div class="cart-item-desc">
-                          <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
-                            <span class="badge">计算机</span>
-                            <h6>C语言入门</h6>
-                            <p class="size">作者: 老李</p>
-                            <p class="color">出版社: 长春工业大学</p>
-                            <p class="price">未还</p>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Cart Item -->
-                <div class="single-cart-item">
-                    <a href="#" class="product-image">
-                        <img src="show/img/product-img/product-2.jpg" class="cart-thumb" alt="">
-                        <!-- Cart Item Desc -->
-                        <div class="cart-item-desc">
-                          <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
-                            <span class="badge">文学</span>
-                            <h6>人间词话</h6>
-                            <p class="size">作者: Boss</p>
-                            <p class="color">出版社: CCUT</p>
-                            <p class="price">已还</p>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Cart Item -->
-                <div class="single-cart-item">
-                    <a href="#" class="product-image">
-                        <img src="show/img/product-img/product-3.jpg" class="cart-thumb" alt="">
-                        <!-- Cart Item Desc -->
-                        <div class="cart-item-desc">
-                          <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
-                          <span class="badge">励志</span>
-                          <h6>心灵鸡汤</h6>
-                          <p class="size">作者: 老王</p>
-                          <p class="color">出版社: 清华出版社</p>
-                          <p class="price">已还</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- Cart Summary -->
-            <div class="cart-amount-summary">
-
-                <h2>张老板</h2>
-                <ul class="summary-table">
-                    <li><span>学号:</span> <span>20172686</span></li>
-                    <li><span>学院:</span> <span>计算机科学与工程</span></li>
-                    <li><span>班级:</span> <span>170408</span></li>
-                    <li><span>手机号:</span> <span>17767788503</span></li>
-                    <li><span>借书权限:</span> <span>书籍未还，不可借</span></li>
-                </ul>
-                <div class="checkout-btn mt-100">
-                    <a href="show/template/checkout.html" class="btn essence-btn">注销</a>
-                    <a href="show/template/checkout.html" class="btn essence-btn">还书</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <script src="show/model/right.js"></script>
     <!-- ##### Right Side Cart End ##### -->
 
     <!-- ##### Welcome Area Start ##### -->
@@ -159,6 +82,7 @@
     <script src="show/js/classy-nav.min.js"></script>
     <!-- Active js -->
     <script src="show/js/active.js"></script>
+    <script src="show/model/init.js"></script>
     <script src="show/js/index.js"></script>
 </body>
 
