本地版完成

--- a/src/main/resources/static/back/starter.html
+++ b/src/main/resources/static/back/starter.html
@@ -41,6 +41,7 @@
 <script src="plugins/jquery/jquery.min.js"></script>
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="dist/js/adminlte.min.js"></script>
+<script src="model/init.js"></script>
 <script src="js/starter.js"></script>
 </body>
 </html>
