--- a/src/main/resources/static/back/book/book.html
+++ b/src/main/resources/static/back/book/book.html
@@ -285,7 +285,7 @@
 <script src="../plugins/jquery/jquery.min.js"></script>
 <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="../dist/js/adminlte.min.js"></script>
-<script src="../js/model.js"></script>
+<script src="../model/init.js"></script>
 <script src="js/book.js"></script>
 </body>
 </html>
