--- a/src/main/resources/static/back/order/order.html
+++ b/src/main/resources/static/back/order/order.html
@@ -191,6 +191,7 @@
 <script src="../plugins/jquery/jquery.min.js"></script>
 <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="../dist/js/adminlte.min.js"></script>
+<script src="../model/init.js"></script>
 <script src="js/order.js"></script>
 </body>
 </html>
